//
//  File.swift
//  
//
//  Created by Sarah Lichter on 12/16/21.
//

import Foundation

public enum Category: String, CaseIterable {
    case health = "Health",
         relationships = "Relationships",
         money = "Money",
         selfDiscovery = "Self-Discovery",
         managingEmotions = "Managing Emotions",
         all = "All"
}
